--- a/src/app/login-module/login-page/login-page.component.html
+++ b/src/app/login-module/login-page/login-page.component.html
@@ -12,22 +12,18 @@
               <div class="container">
                   <div class="row">
                       <div class="col-lg-10 col-xl-7 mx-auto">
-                          <h3 class="display-4">Split page!</h3>
-                          <p class="text-muted mb-4">Create a login split page using Bootstrap 4.</p>
-                          <form>
+                          <h3 class="display-4">Solución Contable!</h3>
+                          <p class="text-muted mb-4">algun slogan por aca</p>
+                          <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
                               <div class="form-group mb-3">
-                                  <input id="inputEmail" type="email" placeholder="Email address" required="" autofocus="" class="form-control rounded-pill border-0 shadow-sm px-4">
+                                  <input formControlName="userName"  id="inputUserName" type="text" placeholder="Nombre de Usuario" required="" autofocus="" class="form-control rounded-pill border-0 shadow-sm px-4">
                               </div>
                               <div class="form-group mb-3">
-                                  <input id="inputPassword" type="password" placeholder="Password" required="" class="form-control rounded-pill border-0 shadow-sm px-4 text-primary">
+                                  <input formControlName="password" id="inputPassword" type="password" placeholder="Password" required="" class="form-control rounded-pill border-0 shadow-sm px-4 text-primary">
                               </div>
-                              <div class="custom-control custom-checkbox mb-3">
-                                  <input id="customCheck1" type="checkbox" checked class="custom-control-input">
-                                  <label for="customCheck1" class="custom-control-label">Remember password</label>
-                              </div>
+
                               <button type="submit" class="btn btn-primary btn-block text-uppercase mb-2 rounded-pill shadow-sm">Sign in</button>
-                              <div class="text-center d-flex justify-content-between mt-4"><p>Snippet by <a href="https://bootstrapious.com/snippets" class="font-italic text-muted">
-                                      <u>Boostrapious</u></a></p></div>
+
                           </form>
                       </div>
                   </div>
