--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,7 +19,7 @@
 <div class="row">
   <!-- column -->
   <div class="col-12">
-    <app-top-selling></app-top-selling>
+    <!-- <app-top-selling></app-top-selling> -->
   </div>
 </div>
 <!-- ============================================================== -->
@@ -28,7 +28,7 @@
 <!-- ============================================================== -->
 <!-- cards -->
 <!-- ============================================================== -->
-<app-blog-cards></app-blog-cards>
+<!-- <app-blog-cards></app-blog-cards> -->
 <!-- ============================================================== -->
 <!-- cards -->
 <!-- ============================================================== -->
