--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -19,16 +19,6 @@
 <div class="row">
   <!-- column -->
   <div class="col-12">
-    <!-- <app-top-selling></app-top-selling> -->
+    <app-top-selling></app-top-selling>
   </div>
 </div>
-<!-- ============================================================== -->
-<!-- Table -->
-<!-- ============================================================== -->
-<!-- ============================================================== -->
-<!-- cards -->
-<!-- ============================================================== -->
-<!-- <app-blog-cards></app-blog-cards> -->
-<!-- ============================================================== -->
-<!-- cards -->
-<!-- ============================================================== -->
