--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -1,38 +1,3 @@
-<!-- ============================================================== -->
-<!-- toggle and nav items -->
-<!-- ============================================================== -->
-<ul class="navbar-nav float-start me-auto">
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/dashboard"> Starter </a>
-  </li>
-  <li class="nav-item">
-    <a class="nav-link waves-effect waves-dark" href="/about"> About </a>
-  </li>
-  <!-- ============================================================== -->
-  <!-- create new -->
-  <!-- ============================================================== -->
-  <li class="nav-item d-none d-md-block" ngbDropdown placement="bottom-end">
-    <a
-      ngbDropdownToggle
-      class="nav-link waves-effect waves-dark"
-      href="javascript:void(0)"
-      data-toggle="dropdown"
-      aria-haspopup="true"
-      aria-expanded="false"
-    >
-      <span>Create New</span>
-    </a>
-    <div ngbDropdownMenu>
-      <a class="dropdown-item" href="#">Action</a>
-      <a class="dropdown-item" href="#">Another action</a>
-      <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="#">Something else here</a>
-    </div>
-  </li>
-</ul>
-<!-- ============================================================== -->
-<!-- Right side toggle and nav items -->
-<!-- ============================================================== -->
 <ul class="navbar-nav float-end">
   <!-- ============================================================== -->
   <!-- User profile and search -->
@@ -55,12 +20,12 @@
       <span class="ms-2">Steve Jobs</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
-      <a class="dropdown-item" href="javascript:void(0)"> My Profile</a>
-      <a class="dropdown-item" href="javascript:void(0)"> My Balance</a>
-      <a class="dropdown-item" href="javascript:void(0)"> Inbox</a>
-      <div class="dropdown-divider"></div>
+      <a class="dropdown-item" href="javascript:void(0)">Mi Perfil</a>
+      <a class="dropdown-item" href="/admin"> Admin</a>
+      <!-- <a class="dropdown-item" href="javascript:void(0)"> Inbox</a> -->
+      <!-- <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="javascript:void(0)"> Account Setting</a>
-      <div class="dropdown-divider"></div>
+      <div class="dropdown-divider"></div> -->
       <a class="dropdown-item" href="javascript:void(0)" (click)="logout()"> Logout</a>
     </div>
   </li>
