--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,5 +1,5 @@
 <!-- Toaster -->
-<!-- <app-toaster></app-toaster> -->
+<app-toaster-container></app-toaster-container>
 
 <h2>Toasts</h2>
   <p>Here are some available toast notifications:</p>
