--- a/src/app/login-module/login-page/login-page.component.html
+++ b/src/app/login-module/login-page/login-page.component.html
@@ -1,4 +1,6 @@
 <div class="container-fluid">
+  <!-- Toaster -->
+<app-toaster-container></app-toaster-container>
   <div class="row no-gutter">
       <!-- The image half -->
       <div class="col-md-6 d-none d-md-flex bg-image"></div>
