--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -17,7 +17,7 @@
         class="rounded-circle"
         width="31"
       />
-      <span class="ms-2">Steve Jobs</span>
+      <span class="ms-2">{{userName}}</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" href="javascript:void(0)">Mi Perfil</a>
