--- a/src/app/login-module/login-page/login-page.component.scss
+++ b/src/app/login-module/login-page/login-page.component.scss
@@ -4,7 +4,7 @@
 }
 
 .bg-image {
-  background-image: url('https://bootstrapious.com/i/snippets/sn-page-split/bg.jpg');
+  background-image: url("https://bootstrapious.com/i/snippets/sn-page-split/bg.jpg");
   background-size: cover;
   background-position: center center;
 }
