User profile FE done

--- a/src/app/profile-module/user-profile/user-profile.component.html
+++ b/src/app/profile-module/user-profile/user-profile.component.html
@@ -1,1 +1,68 @@
-<p>user-profile works!</p>
+<!-- Toaster -->
+<app-toaster-container></app-toaster-container>
+<div class="container bootstrap snippets bootdey">
+  <h1 class="text-primary">Editar Perfil</h1>
+  <hr />
+  <div class="row">
+    <h3>Información Personal</h3>
+    <!-- left column -->
+    <!-- <div class="col-md-3">
+      <div class="text-center">
+        <img
+          src="https://bootdey.com/img/Content/avatar/avatar7.png"
+          class="avatar img-circle img-thumbnail"
+          alt="avatar"
+        />
+        <h6>Upload a different photo...</h6>
+
+        <input type="file" class="form-control" />
+      </div>
+    </div> -->
+
+    <!-- edit form column -->
+    <div class="col-md-9 personal-info">
+      <form class="form-horizontal" role="form">
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Nombre:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="" />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Apellido:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="" />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Correo Electrónico:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="" />
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <hr />
+  <div class="row">
+    <h3>Información del Usuario</h3>
+    <!-- edit form column -->
+    <div class="col-md-9 personal-info">
+      <form class="form-horizontal" role="form">
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Nombre de usuario:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="" />
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="col-lg-3 control-label">Contraseña:</label>
+          <div class="col-lg-8">
+            <input class="form-control" type="text" value="" />
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
+<hr />
