--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -17,16 +17,18 @@
         class="rounded-circle"
         width="31"
       />
-      <span class="ms-2">{{userName}}</span>
+      <span class="ms-2">{{ userName }}</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
-      <a class="dropdown-item" href="javascript:void(0)">Mi Perfil</a>
+      <a class="dropdown-item" href="/user-profile">Mi Perfil</a>
       <a class="dropdown-item" href="/admin"> Admin</a>
       <!-- <a class="dropdown-item" href="javascript:void(0)"> Inbox</a> -->
       <!-- <div class="dropdown-divider"></div>
       <a class="dropdown-item" href="javascript:void(0)"> Account Setting</a>
       <div class="dropdown-divider"></div> -->
-      <a class="dropdown-item" href="javascript:void(0)" (click)="logout()"> Logout</a>
+      <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">
+        Logout</a
+      >
     </div>
   </li>
   <!-- ============================================================== -->
