--- a/src/app/profile-module/user-profile/user-profile.component.html
+++ b/src/app/profile-module/user-profile/user-profile.component.html
@@ -27,7 +27,7 @@
 
       <!-- edit form column -->
       <div class="col-md-9 personal-info">
-        <div class="form-group">
+        <div class="form-group required">
           <label class="col-lg-3 control-label">Nombre:</label>
           <div class="col-lg-8">
             <input
@@ -35,10 +35,11 @@
               id="inputNameOfUser"
               class="form-control"
               type="text"
+              required
             />
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group required">
           <label class="col-lg-3 control-label">Apellido:</label>
           <div class="col-lg-8">
             <input
@@ -49,7 +50,7 @@
             />
           </div>
         </div>
-        <div class="form-group">
+        <div class="form-group required">
           <label class="col-lg-3 control-label">Correo Electrónico:</label>
           <div class="col-lg-8">
             <input
