--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,8 +1,35 @@
 /* You can add global styles to this file, and also import other style files */
-@import '~font-awesome/scss/font-awesome.scss';
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800');
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+@import "~font-awesome/scss/font-awesome.scss";
+@import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800");
+html,
+body {
+  height: 100%;
+}
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+}
 
 /* Importing Bootstrap SCSS file. */
-@import '~bootstrap/scss/bootstrap';
+@import "~bootstrap/scss/bootstrap";
+
+.form-group.required .control-label:after {
+  content: " *";
+  color: red;
+}
+
+/*Show red border if kept the input empty after touching*/
+.ng-touched.ng-invalid-required {
+  border-color: red;
+}
+/* Show red border when stuff has been typed in, but its invalid */
+.ng-dirty.ng-invalid {
+  border-color: red;
+}
+/*Show normal border color when typed in for the first time*/
+.ng-untouched.ng-invalid {
+  border-color: #ccc;
+}
+.ng-submitted input.ng-invalid {
+  border-color: red;
+}
