--- a/src/app/admin-module/components/activity/activity.component.html
+++ b/src/app/admin-module/components/activity/activity.component.html
@@ -26,7 +26,7 @@
                     </div>
                   </div>
                 </td>
-                <td>
+                <td class="d-flex justify-content-end">
                   <button type="button" class="btn btn-primary">
                     <i class="fa fa-pencil"></i> editar
                   </button>
