--- a/src/app/admin-module/components/activity/activity.component.html
+++ b/src/app/admin-module/components/activity/activity.component.html
@@ -1,3 +1,5 @@
+<!-- Toaster -->
+<app-toaster-container></app-toaster-container>
 <div class="row mt-4 p-4">
   <div class="col-12">
     <div class="card">
@@ -5,7 +7,11 @@
         <h4 class="card-title">Lista de Actividades</h4>
         <div class="row col-md-6">
           <div class="col-md-4">
-            <button type="button" class="btn btn-primary">
+            <button
+              type="button"
+              class="btn btn-primary"
+              (click)="open(content)"
+            >
               <i class="fa-solid fa-plus"></i> Agregar
             </button>
           </div>
@@ -27,8 +33,12 @@
                   </div>
                 </td>
                 <td class="d-flex justify-content-end">
-                  <button type="button" class="btn btn-primary">
-                    <i class="fa fa-pencil"></i> editar
+                  <button
+                    type="button"
+                    class="btn btn-primary"
+                    (click)="open(content, a)"
+                  >
+                    <i class="fa fa-pencil"></i> Editar
                   </button>
                 </td>
               </tr>
@@ -39,3 +49,39 @@
     </div>
   </div>
 </div>
+
+<!-- Modal to create and update an activity -->
+<ng-template #content let-modal>
+  <div class="modal-header">
+    <h4 class="modal-title" id="modal-basic-title">{{ modalTitle }}</h4>
+    <button
+      type="button"
+      class="close"
+      aria-label="Close"
+      (click)="modal.dismiss('Cross click')"
+    >
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+  <div class="modal-body">
+    <form [formGroup]="activityForm" class="form-horizontal" role="form">
+      <div class="form-group required">
+        <label class="col-lg-12 control-label">Nombre de la actividad:</label>
+        <div class="col-lg-8">
+          <input
+            formControlName="activityName"
+            id="input-activity-name"
+            class="form-control"
+            type="text"
+            required
+          />
+        </div>
+      </div>
+    </form>
+  </div>
+  <div class="modal-footer">
+    <button type="button" class="btn btn-outline-dark" (click)="saveActivity()">
+      Guardar
+    </button>
+  </div>
+</ng-template>
