--- a/src/app/admin-module/components/activity/activity.component.html
+++ b/src/app/admin-module/components/activity/activity.component.html
@@ -35,6 +35,13 @@
                 <td class="d-flex justify-content-end">
                   <button
                     type="button"
+                    class="btn btn-danger"
+                    (click)="makeInactive(a)"
+                  >
+                    <i class="fa fa-pencil"></i> Eliminar
+                  </button>
+                  <button
+                    type="button"
                     class="btn btn-primary"
                     (click)="open(content, a)"
                   >
@@ -65,9 +72,9 @@
   </div>
   <div class="modal-body">
     <form [formGroup]="activityForm" class="form-horizontal" role="form">
-      <div class="form-group required">
-        <label class="col-lg-12 control-label">Nombre de la actividad:</label>
-        <div class="col-lg-8">
+      <div class="row">
+        <div class="form-group required col-md-6">
+          <label class="control-label">Nombre de la actividad:</label>
           <input
             formControlName="activityName"
             id="input-activity-name"
@@ -75,6 +82,25 @@
             type="text"
             required
           />
+        </div>
+
+        <div class="form-check col-md-6">
+          <div class="d-flex justify-content-end mt-2">
+            <input
+              formControlName="activityActive"
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="has-active-check"
+            />
+            <label
+              class="form-check-label"
+              style="margin-left: 15px"
+              for="has-active-check"
+            >
+              Active
+            </label>
+          </div>
         </div>
       </div>
     </form>
