--- a/src/app/admin-module/components/activity/activity.component.html
+++ b/src/app/admin-module/components/activity/activity.component.html
@@ -5,8 +5,8 @@
     <div class="card">
       <div class="card-body">
         <h4 class="card-title">Lista de Actividades</h4>
-        <div class="row col-md-6">
-          <div class="col-md-4">
+        <div class="row">
+          <div class="col-md-6">
             <button
               type="button"
               class="btn btn-primary"
@@ -15,7 +15,27 @@
               <i class="fa-solid fa-plus"></i> Agregar
             </button>
           </div>
+          <div class="col-md-6">
+            <div class="d-flex justify-content-end">
+              <input
+                class="form-check-input"
+                type="checkbox"
+                value=""
+                id="show-inactive-check"
+                [(ngModel)]="showInactive"
+                (change)="showInactives()"
+              />
+              <label
+                class="form-check-label"
+                style="margin-left: 15px"
+                for="show-inactive-check"
+              >
+                Mostrar Inactivos
+              </label>
+            </div>
+          </div>
         </div>
+
         <div class="table-responsive">
           <table class="table align-middle text-nowrap">
             <thead>
