--- a/src/app/admin-module/components/client/client.component.html
+++ b/src/app/admin-module/components/client/client.component.html
@@ -39,6 +39,7 @@
           <table class="table align-middle text-nowrap">
             <thead>
               <tr>
+                <th class="text-dark font-medium fs-4">Personería</th>
                 <th class="text-dark font-medium fs-4">Cédula</th>
                 <th class="text-dark font-medium fs-4">Nombre</th>
                 <th class="text-dark font-medium fs-4">Apellido</th>
@@ -50,6 +51,15 @@
             </thead>
             <tbody>
               <tr *ngFor="let a of clientList">
+                <td>
+                  <div class="d-flex align-items-center">
+                    <div class="ms-3">
+                      <h5 class="mb-0 font-medium">
+                        {{ a.isLegalPerson ? "Jurídica" : "Fisica" }}
+                      </h5>
+                    </div>
+                  </div>
+                </td>
                 <td>
                   <div class="d-flex align-items-center">
                     <div class="ms-3">
@@ -67,15 +77,8 @@
                 <td>
                   <div class="d-flex align-items-center">
                     <div class="ms-3">
-                      <h5 class="mb-0 font-medium">{{ a.lastName }}</h5>
-                    </div>
-                  </div>
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <div class="ms-3">
                       <h5 class="mb-0 font-medium">
-                        {{ a.children }}
+                        {{ a.isLegalPerson ? "NA" : a.lastName }}
                       </h5>
                     </div>
                   </div>
@@ -84,7 +87,17 @@
                   <div class="d-flex align-items-center">
                     <div class="ms-3">
                       <h5 class="mb-0 font-medium">
-                        {{ a.isLegalPerson ? "Fisica" : "Juridica" }}
+                        {{ a.isLegalPerson ? "NA" : a.children }}
+                      </h5>
+                    </div>
+                  </div>
+                </td>
+
+                <td>
+                  <div class="d-flex align-items-center">
+                    <div class="ms-3">
+                      <h5 class="mb-0 font-medium">
+                        {{ a.isLegalPerson ? "NA" : a.hasMate ? "Si" : "No" }}
                       </h5>
                     </div>
                   </div>
@@ -93,16 +106,9 @@
                   <div class="d-flex align-items-center">
                     <div class="ms-3">
                       <h5 class="mb-0 font-medium">
-                        {{ a.hasMate ? "Si" : "No" }}
-                      </h5>
-                    </div>
-                  </div>
-                </td>
-                <td>
-                  <div class="d-flex align-items-center">
-                    <div class="ms-3">
-                      <h5 class="mb-0 font-medium">
-                        {{ a.isSalaried ? "Si" : "No" }}
+                        {{
+                          a.isLegalPerson ? "NA" : a.isSalaried ? "Si" : "No"
+                        }}
                       </h5>
                     </div>
                   </div>
@@ -148,8 +154,55 @@
   <div class="modal-body">
     <form [formGroup]="clientForm" class="form-horizontal" role="form">
       <div class="form-group required">
-        <div class="row">
-          <div class="d-flex justify-content-end">
+        <div class="row d-flex offset-1 mt-2">
+          <div class="form-check col-md-3">
+            <input
+              formControlName="clientLegalPerson"
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="legal-person-check"
+              (change)="IsLegalPerson()"
+            />
+            <label class="form-check-label" for="legal-person-check">
+              Persona Jurídica
+            </label>
+          </div>
+          <div class="form-check col-md-3">
+            <input
+              formControlName="clientIsSalaried"
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="salaried-check"
+              *ngIf="!legalPerson"
+            />
+            <label
+              class="form-check-label"
+              for="salaried-check"
+              *ngIf="!legalPerson"
+            >
+              Asalariado
+            </label>
+          </div>
+          <div class="form-check col-md-3">
+            <input
+              formControlName="clientHasMate"
+              class="form-check-input"
+              type="checkbox"
+              value=""
+              id="has-mate-check"
+              *ngIf="!legalPerson"
+            />
+            <label
+              class="form-check-label"
+              for="has-mate-check"
+              *ngIf="!legalPerson"
+            >
+              Conyugue
+            </label>
+          </div>
+          <div class="form-check col-md-3">
             <input
               formControlName="clientActive"
               class="form-check-input"
@@ -157,16 +210,38 @@
               value=""
               id="has-active-check"
             />
-            <label
-              class="form-check-label"
-              style="margin-left: 15px"
-              for="has-active-check"
-            >
+            <label class="form-check-label" for="has-active-check">
               Active
             </label>
           </div>
         </div>
-        <div class="row mt-2">
+        <div class="row mt-2" *ngIf="legalPerson">
+          <div class="col-md-6">
+            <label class="control-label">Razón Social:</label>
+            <div class="">
+              <input
+                formControlName="clientName"
+                id="input-client-name"
+                class="form-control"
+                type="text"
+                required
+              />
+            </div>
+          </div>
+          <div class="col-md-6">
+            <label class="control-label">Cédula Jurídica:</label>
+            <div class="">
+              <input
+                formControlName="clientDni"
+                id="input-client-dni"
+                class="form-control"
+                type="text"
+                required
+              />
+            </div>
+          </div>
+        </div>
+        <div class="row mt-2" *ngIf="!legalPerson">
           <div class="col-md-6">
             <label class="control-label">Nombre:</label>
             <div class="">
@@ -192,9 +267,9 @@
             </div>
           </div>
         </div>
-        <div class="row mt-2">
+        <div class="row mt-2" *ngIf="!legalPerson">
           <div class="col-md-6">
-            <label class="control-label">Cédula:</label>
+            <label class="control-label" *ngIf="!legalPerson">Cédula:</label>
             <div class="">
               <input
                 formControlName="clientDni"
@@ -216,44 +291,6 @@
                 required
               />
             </div>
-          </div>
-        </div>
-        <div class="row d-flex offset-1 mt-2">
-          <div class="form-check col-md-4">
-            <input
-              formControlName="clientLegalPerson"
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="legal-person-check"
-            />
-            <label class="form-check-label" for="legal-person-check">
-              Persona Jurídica
-            </label>
-          </div>
-          <div class="form-check col-md-4">
-            <input
-              formControlName="clientIsSalaried"
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="salaried-check"
-            />
-            <label class="form-check-label" for="salaried-check">
-              Asalariado
-            </label>
-          </div>
-          <div class="form-check col-md-4">
-            <input
-              formControlName="clientHasMate"
-              class="form-check-input"
-              type="checkbox"
-              value=""
-              id="has-mate-check"
-            />
-            <label class="form-check-label" for="has-mate-check">
-              Conyugue
-            </label>
           </div>
         </div>
       </div>
