--- a/src/app/admin-module/components/client/client.component.html
+++ b/src/app/admin-module/components/client/client.component.html
@@ -1,4 +1,3 @@
-<!-- Toaster -->
 <app-toaster-container></app-toaster-container>
 <div class="row mt-4 p-4">
   <div class="col-12">
@@ -290,6 +289,20 @@
                 required
               />
             </div>
+          </div>
+        </div>
+        <div class="row mt-2">
+          <div class="col-md-6">
+            <label class="control-label">Actividad:</label>
+            <ng-multiselect-dropdown
+              [placeholder]="'Seleccionar Actividad'"
+              [settings]="dropdownSettings"
+              [data]="dropdownList"
+              [(ngModel)]="selectedItems"
+              (onSelect)="onItemSelect($event)"
+              (onSelectAll)="onSelectAll($event)"
+            >
+            </ng-multiselect-dropdown>
           </div>
         </div>
       </div>
