--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~font-awesome/scss/font-awesome.scss";
+@import "../node_modules/@syncfusion/ej2-base/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-buttons/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-dropdowns/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-inputs/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-popups/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-lists/styles/material.css";
+@import "../node_modules/@syncfusion/ej2-angular-dropdowns/styles/material.css";
 @import url("https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800");
 html,
 body {
