--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -1,7 +1,15 @@
 <ul class="navbar-nav float-end">
-  <!-- ============================================================== -->
-  <!-- User profile and search -->
-  <!-- ============================================================== -->
+  <li class="nav-item" placement="bottom-client">
+    <button
+      type="button"
+      class="btn btn-primary"
+      style="margin-top: 0.8rem !important"
+      (click)="myCompOneObj.open(content)"
+    >
+      Primary
+    </button>
+  </li>
+
   <li class="nav-item" ngbDropdown placement="bottom-end">
     <a
       ngbDropdownToggle
@@ -11,21 +19,11 @@
       aria-haspopup="true"
       aria-expanded="false"
     >
-      <img
-        src="assets/images/users/user1.jpg"
-        alt="user"
-        class="rounded-circle"
-        width="31"
-      />
       <span class="ms-2">{{ userName }}</span>
     </a>
     <div class="dropdown-menu-right" ngbDropdownMenu>
       <a class="dropdown-item" href="/user-profile">Mi Perfil</a>
       <a class="dropdown-item" href="/admin"> Admin</a>
-      <!-- <a class="dropdown-item" href="javascript:void(0)"> Inbox</a> -->
-      <!-- <div class="dropdown-divider"></div>
-      <a class="dropdown-item" href="javascript:void(0)"> Account Setting</a>
-      <div class="dropdown-divider"></div> -->
       <a class="dropdown-item" href="javascript:void(0)" (click)="logout()">
         Logout</a
       >
@@ -35,3 +33,7 @@
   <!-- User profile and search -->
   <!-- ============================================================== -->
 </ul>
+
+<ng-template #content let-modal>
+  <app-client-select></app-client-select>
+</ng-template>
