--- a/src/app/shared/client-select/client-select/client-select.component.html
+++ b/src/app/shared/client-select/client-select/client-select.component.html
@@ -7,12 +7,27 @@
   </button>
 </div>
 <div class="modal-body">
-  <select class="selectpicker">
-    <option data-tokens="ketchup mustard">Hot Dog, Fries and a Soda</option>
-    <option data-tokens="mustard">Burger, Shake and a Smile</option>
-    <option data-tokens="frosting">Sugar, Spice and all things nice</option>
-  </select>
+  <form [formGroup]="clientSelectForm" class="form-horizontal" role="form">
+    <div class="row">
+      <div class="col-md-12">
+        <mat-form-field class="col-md-12">
+          <mat-label>Seleccione un Cliente</mat-label>
+          <mat-select [(value)]="selected">
+            <mat-option *ngFor="let item of clientList" [value]="item.id">
+              {{ item.name }} {{ item.lastName }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
 </div>
 <div class="modal-footer">
-  <button type="button" class="btn btn-outline-dark">Guardar</button>
+  <button
+    type="button"
+    class="btn btn-outline-dark"
+    (click)="setClientLocalStorage()"
+  >
+    Guardar
+  </button>
 </div>
