--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -51,3 +51,7 @@
     <app-top-selling></app-top-selling>
   </div>
 </div>
+
+<ng-template #content let-modal>
+  <app-shared-client-select-modal></app-shared-client-select-modal>
+</ng-template>
