--- a/src/app/shared/header/navigation.component.html
+++ b/src/app/shared/header/navigation.component.html
@@ -6,7 +6,7 @@
       style="margin-top: 0.8rem !important"
       (click)="myCompOneObj.open(content)"
     >
-      Primary
+      {{ btnName }}
     </button>
   </li>
 
