--- a/src/app/admin-module/admin-page/admin-page.component.html
+++ b/src/app/admin-module/admin-page/admin-page.component.html
@@ -1,4 +1,5 @@
 <mat-tab-group>
   <mat-tab label="Actividad"><app-activity></app-activity> </mat-tab>
   <mat-tab label="Cliente"><app-client></app-client> </mat-tab>
+  <mat-tab label="Provider"><app-provider></app-provider> </mat-tab>
 </mat-tab-group>
